[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraphlib"
version = "0.1.0"
description = "Python library for LangGraph abstraction in AI agent creation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Pedro Andrade", email = "pedro.andrade@daimon.com.br" }
]
keywords = ["langgraph", "langchain", "ai", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["langgraphlib"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
